--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,3 +1,8 @@
+.breakoutWrapper {
+  margin-left:-100%;
+  margin-right:-100%;
+}
+
 #home {
   margin: 0 0 0 0;
   padding: 0 0 0 0;
@@ -197,8 +202,6 @@ About Freshcocoa
 #app-header h1 {
   font-weight: 200;
   font-size: 64px;
-  margin: .5em 0 0 240px;
-  position: relative;
   font-family: 'helvetica neu', helvetica, sans-serif;
 }
 
